# jovaltus

./: .gitignore  .pre-commit-config.yaml  .prettierignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  SOUL.md  __init__.py  eslint.config.mjs  git_utils.py  hooks.py  package-lock.json  package.json  plugin.yaml  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  schemas.py  state.py  tools.py  tsconfig.base.json  tsconfig.eslint.json  tsconfig.json  vitest.config.ts
.github/workflows/: ci.yml  release.yml
.husky/: pre-commit
apps/extension/: .vscodeignore  AGENTS.md  package.json  tsconfig.json
apps/extension/src/: extension.ts
docs/: README.md  architecture.md  conventions.md  jovaltus-proposal.md  project-structure.md  setup.md  tech-stack.md  testing.md  workflows.md
docs/architecture/: core-package.md  extension-package.md  git-workflow.md  monorepo-layout.md  orchestrator-pipeline.md  plugin-architecture.md  subagent-dispatch.md  tool-system.md  vscode-extension-platform.md
docs/archive/agent-runtime-foundation_2026-06-21/: CHECKLIST.md  SPEC.md
docs/features/: agent-mode-pipeline.md  agent-operations.md  agent-runtime.md  chat-interface.md  configuration.md  plugin-setup.md  vscode-extension-platform.md
docs/modules/: plugin-entry.md
docs/principles/: ci-conventions.md  coding-style.md  dependency-management.md  error-handling.md  naming-conventions.md  testing-conventions.md  typescript-conventions.md
prompts/: simplify.md  verify.md
resources/project-architecture/: index.html
resources/project-architecture/assets/: architecture.css  viewer.client.js
skills/agentic-debugging/: SKILL.md
skills/jovaltus-agent/: SKILL.md
skills/manage-agents-md/: SKILL.md
skills/project-documentation/: SKILL.md
src/jovaltus/: SOUL.md  __init__.py  hooks.py  plugin.yaml  schemas.py
tests/: conftest.py  test_git_utils.py  test_schemas.py  test_state.py  test_sync.py  test_tools.py
tests/evals/: __init__.py  conftest.py  rubrics.py  tasks.py  test_jovaltus_skills.py
tests/integration/: conftest.py  test_cli.py
(+78 files in other folders)
