[project]
name = "jovaltus"
version = "0.3.2"
description = "Jovaltus Agent Mode — Hermes plugin for automated development pipeline"
requires-python = ">=3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.mypy]
strict = true
no_namespace_packages = true
show_error_codes = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[tool.pytest.ini_options]
pythonpath = [".."]
testpaths = ["tests"]
