[project]
name = "jovaltus"
version = "0.9.1"
description = "Jovaltus Agent Mode — Hermes plugin for automated development pipeline"
requires-python = ">=3.10"
dependencies = [
    "fabricium>=0.1.1",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.8",
    "mypy>=1.16",
]

[project.entry-points."hermes_agent.plugins"]
jovaltus = "jovaltus"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jovaltus"]

[tool.mypy]
strict = true
files = ["src/jovaltus"]
no_namespace_packages = true
show_error_codes = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "fabricium.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "fabricium"
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
